--- a/front/sass/components/_card.scss
+++ b/front/sass/components/_card.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
+
     a {
         display: block;
         background-color: $color-secondary;
@@ -12,19 +12,24 @@
         border-radius: $border-rad;
         max-width: 28rem;
         transition: all 0.4s;
+
         img {
-           height: 18rem;
+            height: 17rem;
+            object-fit: cover;
         }
+
         h3 {
             font-size: 2rem;
             margin: 2rem 0;
         }
+
         p {
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
         }
+
         &:hover {
             transform: scale(1.05);
             background-color: lighten($color-secondary, 10);
