--- a/front/sass/layouts/_header.scss
+++ b/front/sass/layouts/_header.scss
@@ -3,25 +3,30 @@
     display: flex;
     flex-direction: column;
     padding: 0.8rem 2rem;
+
     @include tablette-only {
         flex-direction: row;
         justify-content: space-around;
     }
+
     @include desktop-only {
         justify-content: flex-start;
         padding-left: 5rem;
     }
 
-    &__link{
+    &__link {
         font-size: 1.4rem;
         padding: 0.8rem 0.5rem;
-        &:nth-child(2){
+
+        &:nth-child(2) {
             margin: 0 2rem;
         }
+
         &:hover {
             color: $color-secondary;
         }
-        i{
+
+        i {
             padding-right: 1.5rem;
         }
     }
@@ -32,6 +37,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 4rem;
+
     @include tablette-only {
         flex-direction: row;
         justify-content: space-between;
@@ -46,8 +52,9 @@
     &__link {
         display: inline-block;
         color: $color-secondary;
-        padding: 0 2rem;
-        transition:transform 0.3s;
+        padding: 2rem;
+        transition: transform 0.3s;
+
         &:hover {
             color: $color-main;
             text-decoration: underline;
