--- a/front/sass/utils/_variables.scss
+++ b/front/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-$color-main: #3498db;
+$color-main: #3498db; // Good contraste #124364 constraste origin #3498db
 $color-secondary: #2c3e50;
-$color-third:#2d2f3e;
-$color-white:#ffffff;
+$color-third: #2d2f3e;
+$color-white: #ffffff;
 
 $border-rad: 15px;
