--- a/front/sass/layouts/_form.scss
+++ b/front/sass/layouts/_form.scss
@@ -2,11 +2,13 @@
     width: 80%;
     max-width: 60rem;
     margin: auto;
+
     &__question {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 3rem;
+
         input {
             margin: 0;
             height: 3rem;
@@ -15,8 +17,9 @@
             padding-left: 1rem;
         }
     }
+
     &__errorMsg {
         font-weight: 600;
-        color: rgb(255, 158, 158);
+        color: #ff9e9e;
     }
 }
